# sport-analyzator

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  up.sh
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.ml  Dockerfile.ml.amd  Dockerfile.ml.base  README.md  alembic.ini  celerybeat-schedule  entrypoint.sh  pyproject.toml  requirements-ml-base.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_match_format.py  002_terms_privacy_accepted_at.py  003_user_is_active_superadmin.py  004_notification_email_quiet_hours.py  005_table_tennis_line_events.py  006_signals_channel.py  006_table_tennis_players_leagues.py  007_line_event_status.py  008_table_tennis_live_scores.py  009_odds_score_and_stats.py  009_table_tennis_result_checks.py  010_betsapi_archive_progress.py  010_table_tennis_finished_at.py  011_archive_progress_last_page.py  011_betsapi_request_logs.py  012_table_tennis_last_score_changed_at.py  013_table_tennis_live_quality_rules.py  013_user_subscriptions.py  014_match_recommendations.py  014_table_tennis_events_performance_indexes.py  015_recommendation_odds.py  015_table_tennis_forecast.py  016_match_result_fetch_attempts.py  (+28 more)
backend/app/: __init__.py  config.py  main.py
backend/docs/: BETSAPI_DATA_COVERAGE.md  BETSAPI_DATA_FLOW.md  BETSAPI_RESPONSES.md
backend/scripts/: apply_ml_migration.py  betsapi_sports_list.py  check_clickhouse_ml_tables.py  check_db.py  check_line_odds_flow.py  check_ml_db_years.py  check_ml_v2_dataset_report.py  clear_recommendations.py  clear_test_data.py  count_betsapi_inplay.py  diagnose_archive_load.py  eval_flip_low_odds.py  fetch_line_debug.py  grant_subscription_by_email.py  load_archive_to_main.py  ml_v2_diagnose_training_data.py  ml_v2_recompute_elo_and_check_tables.py  rebuild_archive_missing_and_single_page.py  revalidate_cancelled_forecasts.py  run_forecast_once.py  seed_test_data.py  telegram_register_bot.py  test_betsapi_response.py  test_ml_v2_admin_api.py  test_verify_models_api.py  verify_ml_models.py  verify_odds_parsing.py
old/backend/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
old/telegram_bot/: Dockerfile  pyproject.toml
(+398 files in other folders)
