[project]
name = "sport-analyzator-telegram-bot"
version = "0.1.0"
description = "Telegram bot for value signals"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "python-telegram-bot>=21.0",
    "redis>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
